arma-rs/tests/derive/fail_struct.stderr
error: Unit structs aren't supported
 --> tests/derive/fail_struct.rs:3:10
  |
3 | #[derive(Arma)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Arma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Structs with no fields aren't supported
 --> tests/derive/fail_struct.rs:6:10
  |
6 | #[derive(Arma)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Arma` (in Nightly builds, run with -Z macro-backtrace for more info)
