arma-rs/tests/derive/fail_struct.rs
use arma_rs_proc::Arma;

#[derive(Arma)]
pub struct UnitDeriveTest;

#[derive(Arma)]
pub struct EmptyDeriveTest();

pub fn main() {}
